--- a/config.ini
+++ b/config.ini
@@ -3,7 +3,7 @@
 ; Recipients is a space-delimited list of addresses.
 ; Override with environment variable EMAIL_RECIPIENTS.
 ; 
-recipients = tom@macwright.org alex@mapbox.com
+recipients = tom@macwright.org alex@mapbox.com carcar2014m@gmail.com
 
 [area]
 ; 
